Implementação de teste unitário.